--- a/Final Documentation/Appendix/References.tex
+++ b/Final Documentation/Appendix/References.tex
@@ -37,6 +37,8 @@
 	
 	\bibitem{understanding-bx} A. Bucaioni and R. Eramo, {\em Understanding bidirectional transformations with TGGs and JTL}, In Proc. of the Second International Workshop on BX, 2013.
 	
+	\bibitem{modelsynchro-tgg} F. Hermann et al., {\em Model synchronization based on triple graph grammars: correctness, completeness and invertibility}, Software and Systems Modeling, vol. 14, pages 241-269, 2013.
+	
 	\bibitem{semethods} S. Easterbrook, J. Singer, M.-A. Storey, \& D. Damian. {\em Selecting Empirical Methods for Software Engineering Research. Guide to Advanced Empirical Software Engineering}, 285-311, 2008. Retrieved from http://doi.org/10.1007/978-1-84800-044-5\_11
 	
 	\bibitem{uml} J. Rumbaugh, I. Jacobson and G. Booch, {\em Unified Modeling Language Reference Manual, The (2nd Edition)}, Pearson Higher Education, pages 1-21, 2004.
