--- a/Final Documentation/Final-Documentation.tex
+++ b/Final Documentation/Final-Documentation.tex
@@ -193,9 +193,11 @@
 	% ************************************************************
   
   	\input{Introduction/Introduction}
- 
+    \clearpage
+    
   	\input{Requirements/Requirements}
- 
+    \clearpage
+    
   	\input{RelatedWork/RelatedWork}
     \clearpage
     
